# Qt-Advanced-Docking-System

./: project.py  pyproject.toml
.github/workflows/: python-builds.yml
sip/: AutoHideDockContainer.sip  AutoHideSideBar.sip  DockAreaTitleBar.sip  DockAreaTitleBar_p.sip  DockContainerWidget.sip  DockManager.sip  FloatingDragPreview.sip
src/: DockManager.cpp
